--- a/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.16__periodics.yaml
+++ b/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.16__periodics.yaml
@@ -94,6 +94,13 @@ tests:
   steps:
     cluster_profile: hypershift
     workflow: hypershift-azure-conformance
+- as: e2e-kubevirt-azure
+  cron: 0 4 * * *
+  steps:
+    cluster_profile: azure4
+    env:
+      HYPERSHIFT_NODE_COUNT: "2"
+    workflow: hypershift-kubevirt-azure-conformance
 zz_generated_metadata:
   branch: release-4.16
   org: openshift
